src/dashboard/oauth2/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kubernetes-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=keycloak-oidc
            - --email-domain="*"
            - --http-address=0.0.0.0:4180
            - --show-debug-on-error=true
            - --cookie-secure=true
            - --cookie-domain=.pi.homekube.org
            - --client-id=test-client
            - --client-secret=iUxp1njMnX5iwfwwj4MLRKnT6KI80PHU
            - --redirect-url=https://db.pi.homekube.org/oauth2/callback
            - --oidc-issuer-url=https://auth.oops.de/realms/test
            - --code-challenge-method=S256
            - --reverse-proxy=true
            - --insecure-oidc-allow-unverified-email=true
            - --resource=uri=/*
            - --whitelist-domain=*.pi.homekube.org
            - --set-authorization-header=true
            - --pass-authorization-header=true
            - --pass-access-token=true
            - --set-xauthrequest=true
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kubernetes-dashboard
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
