src/dashboard/oauth2/ingress-dashboard-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    ## nginx.ingress.kubernetes.io/auth-url: "https://testoauth.pi.homekube.org/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    ## nginx.ingress.kubernetes.io/auth-signin: "https://testoauth.pi.homekube.org/oauth2/start"
    nginx.ingress.kubernetes.io/auth-response-headers: >-
      X-Auth-Request-Email,X-Auth-Request-Preferred-,X-Auth-Request-Access-Token,
      X-Auth-Request-Roles,X-Auth-Request-User,X-Auth-Request-Groups,X-Forwarded-Groups,
      Authorization
    ingress.kubernetes.io/configuration-snippet: |
      auth_request_set $token $upstream_http_authorization;
      proxy_set_header Authorization $token;
      proxy_pass_header Authorization;
  name: ingress-dashboard-db
  namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: db.pi.homekube.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-oauth2-proxy
  namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: db.pi.homekube.org
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
